refactor: rename to fizz/sip and remove laravel refs

--- a/.github/workflows/example-tests.yml
+++ b/.github/workflows/example-tests.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Install root dependencies
         run: bun install
 
-      - name: Build revurb
+      - name: Build fizz
         run: bun run build
 
       - name: Start example app in background
