chore(demo): build frontend to dist and simplify lint scope

--- a/biome.json
+++ b/biome.json
@@ -6,10 +6,7 @@
     "useIgnoreFile": true
   },
   "files": {
-    "includes": [
-      "**",
-      "!!**/dist"
-    ]
+    "includes": ["**"]
   },
   "formatter": {
     "enabled": true,
@@ -49,4 +46,3 @@
     }
   }
 }
-
